[package]
name = "gbmu"
version = "0.1.0"
authors = ["Florian Cadet <cadet.florian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.0.1"
regex = "1.5.4"
num-traits = "0.2.14"
num-derive = "0.3.3"
rustyline = "8.2.0"
minifb = "0.19.3"
priomutex = "0.3.1"
