[package]
name = "gbmu"
version = "0.1.0"
authors = ["Florian Cadet <cadet.florian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.0.1"
lazy_static = "1.4.0"
regex = "1.5.4"
num-traits = "0.2.14"
num-derive = "0.3.3"
rustyline = "8.2.0"
minifb = "0.19.3"
quit = "1.1.3"
chrono = "0.4.19"
cpal = "0.13.3"
num = "0.4.0"
parking_lot = "0.11.1"
